prettierによるフォーマット

--- a/charm.html
+++ b/charm.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>日本黄昏酒場協会</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen">
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
-    <script src="js/html5.js"></script>
-    <script src="js/css3-mediaqueries.js"></script>
+      <script src="js/html5.js"></script>
+      <script src="js/css3-mediaqueries.js"></script>
     <![endif]-->
     <script src="js/jquery1.7.2.min.js"></script>
     <script src="js/script.js"></script>
-    <link rel="icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch.png">
-</head>
-<body id="story">
-<div id="wrapper">
+    <link rel="icon" href="images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch.png"
+    />
+  </head>
+  <body id="story">
+    <div id="wrapper">
+      <script src="base_page/header.js"></script>
 
-    <script src="base_page/header.js"></script>
+      <script>
+        var page = "other";
+      </script>
+      <script src="base_page/main_nav.js"></script>
 
-    <script>
-        var page = 'other'
-    </script>
-    <script src="base_page/main_nav.js"></script>
-
-    <!-- コンテンツ -->
-    <section id="main">
-
+      <!-- コンテンツ -->
+      <section id="main">
         <script src="base_page/main_banner.js"></script>
 
         <section class="content">
-            <h3 class="heading">800万オーバーが語る、黄昏酒場の魅力</h3>
-            <article>
-                <p>
-                    人の意見聞いてる暇あったら黄昏酒場やれよ。<br>
-                    黄昏酒場はフリーゲームだぞ？<br>
-                    悩んでる暇あったら<a href="http://alcostg.amatukami.com/">ここ</a>からダウンロードしろ
-                </p>
-            </article>
+          <h3 class="heading">800万オーバーが語る、黄昏酒場の魅力</h3>
+          <article>
+            <p>
+              人の意見聞いてる暇あったら黄昏酒場やれよ。<br />
+              黄昏酒場はフリーゲームだぞ？<br />
+              悩んでる暇あったら<a href="http://alcostg.amatukami.com/">ここ</a
+              >からダウンロードしろ
+            </p>
+          </article>
         </section>
+      </section>
 
-    </section>
-
-    <script src="base_page/sidebar.js"></script>
-    <script src="base_page/footer.js"></script>
-</div>
-</body>
+      <script src="base_page/sidebar.js"></script>
+      <script src="base_page/footer.js"></script>
+    </div>
+  </body>
 </html>
