--- a/menu.html
+++ b/menu.html
@@ -1,98 +1,366 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>日本黄昏酒場協会</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen">
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
-    <script src="js/html5.js"></script>
-    <script src="js/css3-mediaqueries.js"></script>
+      <script src="js/html5.js"></script>
+      <script src="js/css3-mediaqueries.js"></script>
     <![endif]-->
     <script src="js/jquery1.7.2.min.js"></script>
     <script src="js/script.js"></script>
-    <link rel="icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch.png">
-</head>
-<body id="story">
-<div id="wrapper">
+    <link rel="icon" href="images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch.png"
+    />
+  </head>
+  <body id="story">
+    <div id="wrapper">
+      <script src="base_page/header.js"></script>
 
-    <script src="base_page/header.js"></script>
+      <script>
+        var page = "1st";
+      </script>
+      <script src="base_page/main_nav.js"></script>
 
-    <script>
-        var page = '1st'
-    </script>
-    <script src="base_page/main_nav.js"></script>
-
-    <!-- コンテンツ -->
-    <section id="main">
-
+      <!-- コンテンツ -->
+      <section id="main">
         <script src="base_page/main_banner.js"></script>
 
         <section class="content">
-            <h3 class="heading">メニュー表</h3>
-            <article>
-                <table class="table">
-                    <caption>黄昏酒場で出てくる全メニューの価格一覧です</caption>
-                    <tr><td>商品名</td><td>画像</td><td>並 (円)</td><td>上 (円)</td><td>特上 (円)</td><td>至高 (円)</td><td>タイプ</td></tr>
-                    <tr><td>ビール樽</td><td><img src="images/enemies/kurohige.jpg"></td><td>4500</td><td></td><td></td><td></td><td></td></tr>
-                    <tr><td>カクテルシェーカー</td><td><img src="images/enemies/shaker.jpg"></td><td>5700</td><td></td><td></td><td></td><td></td></tr>
-                    <tr><td>大根</td><td><img src="images/enemies/daikon.jpg"></td><td>80</td><td>240</td><td>400</td><td>840</td><td>A</td></tr>
-                    <tr><td>煮卵</td><td><img src="images/enemies/nitamago.jpg"></td><td>100</td><td>300</td><td>500</td><td>1050</td><td>A</td></tr>
-                    <tr><td>豆腐</td><td><img src="images/enemies/tofu.jpg"></td><td>280</td><td>840</td><td>1400</td><td>2940</td><td>A</td></tr>
-                    <tr><td>かっぱ巻き</td><td><img src="images/enemies/kappamaki.jpg"></td><td>290</td><td>870</td><td>1450</td><td>3045</td><td>A</td></tr>
-                    <tr><td>卵焼き</td><td><img src="images/enemies/tamagoyaki.jpg"></td><td>320</td><td>960</td><td>1600</td><td>3360</td><td>A</td></tr>
-                    <tr><td>枝豆</td><td><img src="images/enemies/edamame.jpg"></td><td>380</td><td>1140</td><td>1900</td><td>3990</td><td>A</td></tr>
-                    <tr><td>納豆巻き</td><td><img src="images/enemies/nattomaki.jpg"></td><td>390</td><td>1170</td><td>1950</td><td>4095</td><td>A</td></tr>
-                    <tr><td>お通し</td><td><img src="images/enemies/otooshi.jpg"></td><td>400</td><td>1200</td><td>2000</td><td>4200?</td><td>A?</td></tr>
-                    <tr><td>寿司</td><td><img src="images/enemies/sushi.jpg"></td><td>819</td><td>2457</td><td>4095</td><td>8600</td><td>A</td></tr>
-                    <tr><td>ピザ</td><td><img src="images/enemies/pizza.jpg"></td><td>1100</td><td>3300</td><td>5500</td><td>11550</td><td>A</td></tr>
-                    <tr><td>チーズ</td><td><img src="images/enemies/cheese.jpg"></td><td>450</td><td>600</td><td>850</td><td>1250?</td><td>B?</td></tr>
-                    <tr><td>野菜スティック</td><td><img src="images/enemies/stick.jpg"></td><td>450</td><td>600</td><td>850</td><td>1250</td><td>B</td></tr>
-                    <tr><td>シャーベット</td><td><img src="images/enemies/sherbet.jpg"></td><td>450</td><td>600</td><td>850</td><td>1250</td><td>B</td></tr>
-                    <tr><td>ビール</td><td><img src="images/enemies/beer.jpg"></td><td>450</td><td>600</td><td>850</td><td>1250</td><td>B</td></tr>
-                    <tr><td>日本酒</td><td><img src="images/enemies/sake.jpg"></td><td>400</td><td>650</td><td>1200</td><td>1600</td><td>C</td></tr>
-                    <tr><td>もっきり</td><td><img src="images/enemies/mokkiri.jpg"></td><td>400</td><td>650</td><td>1200</td><td>1600</td><td>C</td></tr>
-                    <tr><td>緑カクテル</td><td><img src="images/enemies/greencooktail.jpg"></td><td>1200</td><td>3000</td><td>4500</td><td>6750</td><td>D</td></tr>
-                    <tr><td>紫カクテル</td><td><img src="images/enemies/purplecooktail.jpg"></td><td>1200</td><td>3000</td><td>4500</td><td>6750</td><td>D</td></tr>
-                    <tr><td>青カクテル</td><td><img src="images/enemies/bluecooktail.jpg"></td><td>1500</td><td>3750</td><td>5625</td><td>8450</td><td>D</td></tr>
-                    <tr><td>オレンジカクテル</td><td><img src="images/enemies/orangecooktail.jpg"></td><td>2000</td><td>5000</td><td>7500</td><td>11250</td><td>D</td></tr>
-                    <tr><td>ワイン</td><td><img src="images/enemies/wine.jpg"></td><td>350</td><td>480</td><td>700</td><td>900</td><td>E</td></tr>
-                    <tr><td>ナッツ</td><td><img src="images/enemies/nuts.jpg"></td><td>250</td><td>300</td><td>550</td><td>950</td><td>F</td></tr>
-                    <tr><td>枝豆(3面)</td><td><img src="images/enemies/edamame.jpg"></td><td>0</td><td>0</td><td>0</td><td>0</td><td>G</td></tr>
-                    <tr><td>ミラーボール</td><td><img src="images/enemies/mirrorball.jpg"></td><td>0</td><td>0</td><td>0</td><td>0</td><td>G</td></tr>
-                </table>
-                <p>
-                    ただし『?』がついているものについては現行パターンでは当該商品ランクを出せないため、<br>
-                    推測で書かれているものです。<br>
-                    <br>
-                    各タイプは以下のように並の価格を0としたときの会計倍率を表しています。<br>
-                    ただし青カクテルの至高は1500×5.625=8437.5円となるはずですが、<br>
-                    何故か切り上げ以上の金額である8450円となっています。<br>
-                    また、3面の枝豆は倒しても金額が出ませんがミラーボールは倒すと『￥0』という表示が出ることから<br>
-                    通常とは別の処理が入っているものと思われます。
-                </p>
-                <table class="table">
-                    <tr><td>タイプ</td><td>並</td><td>上</td><td>特上</td><td>至高</td></tr>
-                    <tr><td>A</td><td>1</td><td>3</td><td>5</td><td>10.5</td></tr>
-                    <tr><td>B</td><td>1</td><td>1.333</td><td>1.889</td><td>2.778</td></tr>
-                    <tr><td>C</td><td>1</td><td>1.625</td><td>3</td><td>4</td></tr>
-                    <tr><td>D</td><td>1</td><td>2.5</td><td>3.75</td><td>5.625</td></tr>
-                    <tr><td>E</td><td>1</td><td>1.371</td><td>2</td><td>2.571</td></tr>
-                    <tr><td>F</td><td>1</td><td>1.2</td><td>2.2</td><td>3.8</td></tr>
-                    <tr><td>G</td><td>NULL</td><td>NULL</td><td>NULL</td><td>NULL</td></tr>
-                </table>
-            </article>
-
+          <h3 class="heading">メニュー表</h3>
+          <article>
+            <table class="table">
+              <caption>
+                黄昏酒場で出てくる全メニューの価格一覧です
+              </caption>
+              <tr>
+                <td>商品名</td>
+                <td>画像</td>
+                <td>並 (円)</td>
+                <td>上 (円)</td>
+                <td>特上 (円)</td>
+                <td>至高 (円)</td>
+                <td>タイプ</td>
+              </tr>
+              <tr>
+                <td>ビール樽</td>
+                <td><img src="images/enemies/kurohige.jpg" /></td>
+                <td>4500</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>カクテルシェーカー</td>
+                <td><img src="images/enemies/shaker.jpg" /></td>
+                <td>5700</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>大根</td>
+                <td><img src="images/enemies/daikon.jpg" /></td>
+                <td>80</td>
+                <td>240</td>
+                <td>400</td>
+                <td>840</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>煮卵</td>
+                <td><img src="images/enemies/nitamago.jpg" /></td>
+                <td>100</td>
+                <td>300</td>
+                <td>500</td>
+                <td>1050</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>豆腐</td>
+                <td><img src="images/enemies/tofu.jpg" /></td>
+                <td>280</td>
+                <td>840</td>
+                <td>1400</td>
+                <td>2940</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>かっぱ巻き</td>
+                <td><img src="images/enemies/kappamaki.jpg" /></td>
+                <td>290</td>
+                <td>870</td>
+                <td>1450</td>
+                <td>3045</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>卵焼き</td>
+                <td><img src="images/enemies/tamagoyaki.jpg" /></td>
+                <td>320</td>
+                <td>960</td>
+                <td>1600</td>
+                <td>3360</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>枝豆</td>
+                <td><img src="images/enemies/edamame.jpg" /></td>
+                <td>380</td>
+                <td>1140</td>
+                <td>1900</td>
+                <td>3990</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>納豆巻き</td>
+                <td><img src="images/enemies/nattomaki.jpg" /></td>
+                <td>390</td>
+                <td>1170</td>
+                <td>1950</td>
+                <td>4095</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>お通し</td>
+                <td><img src="images/enemies/otooshi.jpg" /></td>
+                <td>400</td>
+                <td>1200</td>
+                <td>2000</td>
+                <td>4200?</td>
+                <td>A?</td>
+              </tr>
+              <tr>
+                <td>寿司</td>
+                <td><img src="images/enemies/sushi.jpg" /></td>
+                <td>819</td>
+                <td>2457</td>
+                <td>4095</td>
+                <td>8600</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>ピザ</td>
+                <td><img src="images/enemies/pizza.jpg" /></td>
+                <td>1100</td>
+                <td>3300</td>
+                <td>5500</td>
+                <td>11550</td>
+                <td>A</td>
+              </tr>
+              <tr>
+                <td>チーズ</td>
+                <td><img src="images/enemies/cheese.jpg" /></td>
+                <td>450</td>
+                <td>600</td>
+                <td>850</td>
+                <td>1250?</td>
+                <td>B?</td>
+              </tr>
+              <tr>
+                <td>野菜スティック</td>
+                <td><img src="images/enemies/stick.jpg" /></td>
+                <td>450</td>
+                <td>600</td>
+                <td>850</td>
+                <td>1250</td>
+                <td>B</td>
+              </tr>
+              <tr>
+                <td>シャーベット</td>
+                <td><img src="images/enemies/sherbet.jpg" /></td>
+                <td>450</td>
+                <td>600</td>
+                <td>850</td>
+                <td>1250</td>
+                <td>B</td>
+              </tr>
+              <tr>
+                <td>ビール</td>
+                <td><img src="images/enemies/beer.jpg" /></td>
+                <td>450</td>
+                <td>600</td>
+                <td>850</td>
+                <td>1250</td>
+                <td>B</td>
+              </tr>
+              <tr>
+                <td>日本酒</td>
+                <td><img src="images/enemies/sake.jpg" /></td>
+                <td>400</td>
+                <td>650</td>
+                <td>1200</td>
+                <td>1600</td>
+                <td>C</td>
+              </tr>
+              <tr>
+                <td>もっきり</td>
+                <td><img src="images/enemies/mokkiri.jpg" /></td>
+                <td>400</td>
+                <td>650</td>
+                <td>1200</td>
+                <td>1600</td>
+                <td>C</td>
+              </tr>
+              <tr>
+                <td>緑カクテル</td>
+                <td><img src="images/enemies/greencooktail.jpg" /></td>
+                <td>1200</td>
+                <td>3000</td>
+                <td>4500</td>
+                <td>6750</td>
+                <td>D</td>
+              </tr>
+              <tr>
+                <td>紫カクテル</td>
+                <td><img src="images/enemies/purplecooktail.jpg" /></td>
+                <td>1200</td>
+                <td>3000</td>
+                <td>4500</td>
+                <td>6750</td>
+                <td>D</td>
+              </tr>
+              <tr>
+                <td>青カクテル</td>
+                <td><img src="images/enemies/bluecooktail.jpg" /></td>
+                <td>1500</td>
+                <td>3750</td>
+                <td>5625</td>
+                <td>8450</td>
+                <td>D</td>
+              </tr>
+              <tr>
+                <td>オレンジカクテル</td>
+                <td><img src="images/enemies/orangecooktail.jpg" /></td>
+                <td>2000</td>
+                <td>5000</td>
+                <td>7500</td>
+                <td>11250</td>
+                <td>D</td>
+              </tr>
+              <tr>
+                <td>ワイン</td>
+                <td><img src="images/enemies/wine.jpg" /></td>
+                <td>350</td>
+                <td>480</td>
+                <td>700</td>
+                <td>900</td>
+                <td>E</td>
+              </tr>
+              <tr>
+                <td>ナッツ</td>
+                <td><img src="images/enemies/nuts.jpg" /></td>
+                <td>250</td>
+                <td>300</td>
+                <td>550</td>
+                <td>950</td>
+                <td>F</td>
+              </tr>
+              <tr>
+                <td>枝豆(3面)</td>
+                <td><img src="images/enemies/edamame.jpg" /></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>G</td>
+              </tr>
+              <tr>
+                <td>ミラーボール</td>
+                <td><img src="images/enemies/mirrorball.jpg" /></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>G</td>
+              </tr>
+            </table>
+            <p>
+              ただし『?』がついているものについては現行パターンでは当該商品ランクを出せないため、<br />
+              推測で書かれているものです。<br />
+              <br />
+              各タイプは以下のように並の価格を0としたときの会計倍率を表しています。<br />
+              ただし青カクテルの至高は1500×5.625=8437.5円となるはずですが、<br />
+              何故か切り上げ以上の金額である8450円となっています。<br />
+              また、3面の枝豆は倒しても金額が出ませんがミラーボールは倒すと『￥0』という表示が出ることから<br />
+              通常とは別の処理が入っているものと思われます。
+            </p>
+            <table class="table">
+              <tr>
+                <td>タイプ</td>
+                <td>並</td>
+                <td>上</td>
+                <td>特上</td>
+                <td>至高</td>
+              </tr>
+              <tr>
+                <td>A</td>
+                <td>1</td>
+                <td>3</td>
+                <td>5</td>
+                <td>10.5</td>
+              </tr>
+              <tr>
+                <td>B</td>
+                <td>1</td>
+                <td>1.333</td>
+                <td>1.889</td>
+                <td>2.778</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>1</td>
+                <td>1.625</td>
+                <td>3</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>D</td>
+                <td>1</td>
+                <td>2.5</td>
+                <td>3.75</td>
+                <td>5.625</td>
+              </tr>
+              <tr>
+                <td>E</td>
+                <td>1</td>
+                <td>1.371</td>
+                <td>2</td>
+                <td>2.571</td>
+              </tr>
+              <tr>
+                <td>F</td>
+                <td>1</td>
+                <td>1.2</td>
+                <td>2.2</td>
+                <td>3.8</td>
+              </tr>
+              <tr>
+                <td>G</td>
+                <td>NULL</td>
+                <td>NULL</td>
+                <td>NULL</td>
+                <td>NULL</td>
+              </tr>
+            </table>
+          </article>
         </section>
+      </section>
 
-    </section>
-
-    <script src="base_page/sidebar.js"></script>
-    <script src="base_page/footer.js"></script>
-</div>
-</body>
+      <script src="base_page/sidebar.js"></script>
+      <script src="base_page/footer.js"></script>
+    </div>
+  </body>
 </html>
