--- a/greeting.html
+++ b/greeting.html
@@ -1,107 +1,141 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <title>日本黄昏酒場協会</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+    <!--[if lt IE 9]>
+      <script src="js/html5.js"></script>
+      <script src="js/css3-mediaqueries.js"></script>
+    <![endif]-->
+    <script src="js/jquery1.7.2.min.js"></script>
+    <script src="js/script.js"></script>
+    <link rel="icon" href="images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch.png"
+    />
+  </head>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-	<title>日本黄昏酒場協会</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
-	<!--[if lt IE 9]>
-		<script src="js/html5.js"></script>
-		<script src="js/css3-mediaqueries.js"></script>
-	<![endif]-->
-	<script src="js/jquery1.7.2.min.js"></script>
-	<script src="js/script.js"></script>
-	<link rel="icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch.png">
-</head>
+  <body id="subpage">
+    <div id="wrapper">
+      <script src="base_page/header.js"></script>
 
-<body id="subpage">
+      <script>
+        var page = "greeting";
+      </script>
+      <script src="base_page/main_nav.js"></script>
 
+      <!-- コンテンツ -->
+      <section id="main">
+        <script src="base_page/main_banner.js"></script>
 
-	<div id="wrapper">
+        <section class="content">
+          <h3 class="heading">黄昏酒場とは</h3>
+          <article>
+            <img
+              src="images/sample1.jpg"
+              width="217"
+              height="140"
+              alt=""
+              class="alignleft border"
+            />
+            <p>
+              呑んべぇ会が作成したシューティングゲームです。<br /><a
+                href="http://alcostg.amatukami.com/"
+                >こちら</a
+              >のサイトからダウンロードすることができます。
+            </p>
+          </article>
+        </section>
 
-	  	<script src="base_page/header.js"></script>
+        <section class="content">
+          <h3 class="heading">日本黄昏酒場協会の取り組み</h3>
+          <article>
+            <img
+              src="images/sample2.jpg"
+              width="217"
+              height="140"
+              alt=""
+              class="alignright border"
+            />
+            <p>
+              黄昏酒場というゲームは再現性が高く、パターン化が好きな人間にとってはとても面白いと感じるゲームです。<br />しかし何故か知名度が低いことで情報の共有が行われず、コミュニティの活性化も行われていません。<br />我々はコミュニティを活性化することで黄昏酒場のスコアアタック人口を増やし、黄昏酒場の稼ぎ(払い？)パターンを進化させることを目的として活動しています。
+            </p>
+          </article>
+        </section>
 
-		<script>
-			var page = 'greeting'
-		</script>
-		<script src="base_page/main_nav.js"></script>
+        <section class="content">
+          <h3 class="heading">基本理念</h3>
+          <article>
+            <img
+              src="images/sample3.jpg"
+              width="217"
+              height="140"
+              alt=""
+              class="alignleft border"
+            />
+            <p>
+              1.
+              回数を重ねずとも安定して質の良いメニューを食べられるようにパターンの研究を行うこと<br /><br />2.
+              1.の理念が量(プレイ回数)より質(金額)であったように、実生活でも無駄に値が張るだけで質がゴミな居酒屋は避けること<br /><br />3.
+              黄昏酒場で浅間伊佐美が多額の料金を払って破産することは考慮に入れないものとすること
+            </p>
+          </article>
+        </section>
 
-	  <!-- コンテンツ -->
-		<section id="main">
+        <section class="content">
+          <h3 class="heading">概要</h3>
+          <article>
+            <table class="table">
+              <tr>
+                <th>団体名</th>
+                <td>
+                  日本黄昏酒場協会（英語表記 Japan Tasogaresakaba Association）
+                </td>
+              </tr>
+              <tr>
+                <th>会長</th>
+                <td>ゑふまいか</td>
+              </tr>
+              <tr>
+                <th>会員数</th>
+                <td>0.0万人</td>
+              </tr>
+              <tr>
+                <th>事業内容</th>
+                <td>黄昏酒場の料金計算方法の研究</td>
+              </tr>
+              <tr>
+                <th>住所</th>
+                <td>ウワバミも眠るこの世の楽園</td>
+              </tr>
+              <tr>
+                <th>Twitter</th>
+                <td>＠iyuzzuko</td>
+              </tr>
+              <tr>
+                <th>この団体は</th>
+                <td>
+                  <a href="http://nyokis.blog.fc2.com/">こちらのサイト</a
+                  >を参考にしたフィクションのサイトです
+                </td>
+              </tr>
+            </table>
+          </article>
+        </section>
+      </section>
+      <!-- / コンテンツ -->
 
-			<script src="base_page/main_banner.js"></script>
-
-			<section class="content">
-				<h3 class="heading">黄昏酒場とは</h3>
-				<article>
-					<img src="images/sample1.jpg" width="217" height="140" alt="" class="alignleft border" />
-					<p>呑んべぇ会が作成したシューティングゲームです。<br><a href="http://alcostg.amatukami.com/">こちら</a>のサイトからダウンロードすることができます。</p>
-				</article>
-			</section>
-
-	    	<section class="content">
-	    		<h3 class="heading">日本黄昏酒場協会の取り組み</h3>
-	    	  	<article>
-					<img src="images/sample2.jpg" width="217" height="140" alt="" class="alignright border" />
-					<p>黄昏酒場というゲームは再現性が高く、パターン化が好きな人間にとってはとても面白いと感じるゲームです。<br>しかし何故か知名度が低いことで情報の共有が行われず、コミュニティの活性化も行われていません。<br>我々はコミュニティを活性化することで黄昏酒場のスコアアタック人口を増やし、黄昏酒場の稼ぎ(払い？)パターンを進化させることを目的として活動しています。</p>
-	    		</article>
-	    	</section>
-
-			<section class="content">
-				<h3 class="heading">基本理念</h3>
-				<article>
-					<img src="images/sample3.jpg" width="217" height="140" alt="" class="alignleft border" />
-					<p>1. 回数を重ねずとも安定して質の良いメニューを食べられるようにパターンの研究を行うこと<br><br>2. 1.の理念が量(プレイ回数)より質(金額)であったように、実生活でも無駄に値が張るだけで質がゴミな居酒屋は避けること<br><br>3. 黄昏酒場で浅間伊佐美が多額の料金を払って破産することは考慮に入れないものとすること</p>
-				</article>
-			</section>
-
-			<section class="content">
-				<h3 class="heading">概要</h3>
-				<article>
-					<table class="table">
-						<tr>
-							<th>団体名</th>
-							<td>日本黄昏酒場協会（英語表記 Japan Tasogaresakaba Association）</td>
-						</tr>
-						<tr>
-							<th>会長</th>
-							<td>ゑふまいか</td>
-						</tr>
-						<tr>
-							<th>会員数</th>
-							<td>0.0万人</td>
-						</tr>
-						<tr>
-							<th>事業内容</th>
-							<td>黄昏酒場の料金計算方法の研究</td>
-						</tr>
-						<tr>
-							<th>住所</th>
-							<td>ウワバミも眠るこの世の楽園</td>
-						</tr>
-						<tr>
-							<th>Twitter</th>
-							<td>＠iyuzzuko</td>
-						</tr>
-						<tr>
-							<th>この団体は</th>
-							<td><a href="http://nyokis.blog.fc2.com/">こちらのサイト</a>を参考にしたフィクションのサイトです</td>
-						</tr>
-					</table>
-	    		</article>
-			</section>
-		</section>
-		<!-- / コンテンツ -->
-
-		<script src="base_page/sidebar.js"></script>
-		<script src="base_page/footer.js"></script>
-
-	</div>
-
-
-</body>
+      <script src="base_page/sidebar.js"></script>
+      <script src="base_page/footer.js"></script>
+    </div>
+  </body>
 </html>
