--- a/links.html
+++ b/links.html
@@ -1,69 +1,85 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>日本黄昏酒場協会</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen">
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <!--[if lt IE 9]>
-    <script src="js/html5.js"></script>
-    <script src="js/css3-mediaqueries.js"></script>
+      <script src="js/html5.js"></script>
+      <script src="js/css3-mediaqueries.js"></script>
     <![endif]-->
     <script src="js/jquery1.7.2.min.js"></script>
     <script src="js/script.js"></script>
-    <link rel="icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch.png">
-</head>
-<body id="story">
-<div id="wrapper">
+    <link rel="icon" href="images/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch.png"
+    />
+  </head>
+  <body id="story">
+    <div id="wrapper">
+      <script src="base_page/header.js"></script>
 
-    <script src="base_page/header.js"></script>
+      <script>
+        var page = "3rd";
+      </script>
+      <script src="base_page/main_nav.js"></script>
 
-    <script>
-        var page = '3rd'
-    </script>
-    <script src="base_page/main_nav.js"></script>
-
-    <!-- コンテンツ -->
-    <section id="main">
-
+      <!-- コンテンツ -->
+      <section id="main">
         <script src="base_page/main_banner.js"></script>
 
         <section class="content">
-            <h3 class="heading">リンク集</h3>
-            <article>
-                <table class="table">
-                    <caption>関連するページ一覧です</caption>
-                    <tr>
-                        <th><a href="index.html">日本黄昏酒場協会<br></a></th>
-                        <td>このページです。</td>
-                    </tr>
-                    <tr>
-                        <th><a href="https://alcostg-score.wefma.net">黄昏酒場スコアボード</a></th>
-                        <td>黄昏酒場スコアボードです。スコアタだけではなく貴方だけの黄昏酒場プレイを上げましょう。</td>
-                    </tr>
-                    <tr>
-                        <th><a href="https://x.com/iyuzzuko">twitter</a></th>
-                        <td>会長のTwitterです。</td>
-                    </tr>
-                    <tr>
-                        <th><a href="https://wefmaika.hatenablog.com/">旧日本黄昏酒場協会ページ</a></th>
+          <h3 class="heading">リンク集</h3>
+          <article>
+            <table class="table">
+              <caption>
+                関連するページ一覧です
+              </caption>
+              <tr>
+                <th>
+                  <a href="index.html">日本黄昏酒場協会<br /></a>
+                </th>
+                <td>このページです。</td>
+              </tr>
+              <tr>
+                <th>
+                  <a href="https://alcostg-score.wefma.net"
+                    >黄昏酒場スコアボード</a
+                  >
+                </th>
+                <td>
+                  黄昏酒場スコアボードです。スコアタだけではなく貴方だけの黄昏酒場プレイを上げましょう。
+                </td>
+              </tr>
+              <tr>
+                <th><a href="https://x.com/iyuzzuko">twitter</a></th>
+                <td>会長のTwitterです。</td>
+              </tr>
+              <tr>
+                <th>
+                  <a href="https://wefmaika.hatenablog.com/"
+                    >旧日本黄昏酒場協会ページ</a
+                  >
+                </th>
 
-                        <td>日本黄昏酒場協会の旧公式ページです。</td>
-                    </tr>
-                    <tr>
-
-                </table>
-            </article>
+                <td>日本黄昏酒場協会の旧公式ページです。</td>
+              </tr>
+              <tr></tr>
+            </table>
+          </article>
         </section>
+      </section>
 
-    </section>
-
-    <script src="base_page/sidebar.js"></script>
-    <script src="base_page/footer.js"></script>
-</div>
-</body>
+      <script src="base_page/sidebar.js"></script>
+      <script src="base_page/footer.js"></script>
+    </div>
+  </body>
 </html>
