名誉全国2位

--- a/greeting.html
+++ b/greeting.html
@@ -106,6 +106,10 @@
                 <td>ゑふまいか</td>
               </tr>
               <tr>
+                <th>副会長</th>
+                <td>かも猫(名誉全国2位)</td>
+              </tr>
+              <tr>
                 <th>会員数</th>
                 <td>0.0万人</td>
               </tr>
@@ -129,6 +133,9 @@
                 </td>
               </tr>
             </table>
+            <p>
+              ※名誉全国2位は謎にPCに全国2位のデータがあるだけで自分自身は出してない謎の存在という意味です。
+            </p>
           </article>
         </section>
       </section>
