--- a/greeting.html
+++ b/greeting.html
@@ -103,11 +103,15 @@
               </tr>
               <tr>
                 <th>会長</th>
-                <td>ゑふまいか</td>
+                <td><a href="https://wefma.net">ゑふまいか</a></td>
               </tr>
               <tr>
                 <th>副会長</th>
-                <td>かも猫(名誉全国2位)</td>
+                <td>
+                  <a href="https://x.com/kamoneko_nonaku">
+                    かも猫(名誉全国2位)
+                  </a>
+                </td>
               </tr>
               <tr>
                 <th>会員数</th>
