ニットさまおめでとう

--- a/greeting.html
+++ b/greeting.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html dir="ltr" lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -103,13 +103,17 @@
               </tr>
               <tr>
                 <th>会長</th>
-                <td><a href="https://wefma.net">ゑふまいか</a></td>
+                <td><a href="https://wefma.net">ゑふまいか(全国2位)</a></td>
               </tr>
               <tr>
                 <th>副会長</th>
+                <td>ニット(全国1位)</td>
+              </tr>
+              <tr>
+                <th>サブ</th>
                 <td>
                   <a href="https://x.com/kamoneko_nonaku">
-                    かも猫(名誉全国2位)
+                    かも猫(名誉全国3位)
                   </a>
                 </td>
               </tr>
@@ -137,9 +141,7 @@
                 </td>
               </tr>
             </table>
-            <p>
-              ※名誉全国2位は謎にPCに全国2位のデータがあるだけで自分自身は出してない謎の存在という意味です。
-            </p>
+            <p>※名誉全国3位はかも猫氏の自称です。</p>
           </article>
         </section>
       </section>
