ニットさまのtwitter垢をいれた

--- a/greeting.html
+++ b/greeting.html
@@ -107,7 +107,9 @@
               </tr>
               <tr>
                 <th>副会長</th>
-                <td>ニット(全国1位)</td>
+                <td>
+                  <a href="https://x.com/nit1600"> ニット(全国1位) </a>
+                </td>
               </tr>
               <tr>
                 <th>サブ</th>
